# strelka

./: .travis.yml  LICENSE  README.md  router.cabal  strelka.cabal
applicative-demo/: Main.hs
applicative-demo/Main/: Effect.hs  RequestParsers.hs  ResponseBuilders.hs
demo/: Main.hs
demo/Main/: Effect.hs  RequestParsers.hs  ResponseBuilders.hs
monadic-demo/: Main.hs
