name:
  router
version:
  0.1
synopsis:
homepage:
  https://github.com/nikita-volkov/router
bug-reports:
  https://github.com/nikita-volkov/router/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, NikitaVolkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/router.git


library
  hs-source-dirs:
    library
  other-modules:
    Router.Prelude
    Router.Wai.Responses
  exposed-modules:
    Router.RequestParser
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators
  default-language:
    Haskell2010
  build-depends:
    http-types >= 0.9 && < 0.10,
    wai == 3.*,
    attoparsec >= 0.10 && < 0.14,
    bytestring >= 0.10 && < 0.11,
    text >= 1 && < 2,
    -- 
    transformers >= 0.4 && < 0.6,
    base-prelude < 2
