name:
  router
version:
  0.1
synopsis:
  Extremely flexible and composable WAI router
description:
  An HTTP server can be defined as a request parser, which produces a response.
  As simple as that.
  This library exploits that fact to produce a very simple API.
homepage:
  https://github.com/nikita-volkov/router
bug-reports:
  https://github.com/nikita-volkov/router/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/router.git


library
  hs-source-dirs:
    library
  other-modules:
    Router.Prelude
    Router.HeadersMap
    Router.QueryMap
    Router.HTTPAuthorizationParser
  exposed-modules:
    Router.Model
    Router.RequestParser
    Router.ParamsParser
    Router.ResponseBuilder
    Router.Executor
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- codecs:
    sandi >= 0.4 && < 0.5,
    -- streaming:
    ducers == 0.1.*,
    -- 
    bytestring-tree-builder == 0.2.*,
    attoparsec >= 0.13 && < 0.14,
    bytestring >= 0.10 && < 0.11,
    text >= 1 && < 2,
    unordered-containers >= 0.2 && < 0.3,
    -- 
    semigroups >= 0.18 && < 0.19,
    mtl == 2.*,
    monad-control >= 1 && < 2,
    transformers-base >= 0.4 && < 0.5,
    transformers >= 0.4 && < 0.6,
    base-prelude < 2,
    base < 5


benchmark demo
  type: 
    exitcode-stdio-1.0
  hs-source-dirs:
    demo
  main-is:
    Main.hs
  other-modules:
    Main.RequestParsers
    Main.ResponseBuilders
    Main.Effect
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N"
  ghc-prof-options:
    -O2
    -threaded
    -fprof-auto
    "-with-rtsopts=-N -p -s -h -i0.1"
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    router,
    attoparsec,
    rebase < 2

