name:
  strelka
version:
  0.4
synopsis:
  Extremely flexible and composable router
description:
  An HTTP server can be defined as a request parser, which produces a response.
  As simple as that.
  This library exploits that fact to produce a very simple API,
  which can then be used on top of any server implementation.
  .
  [Warning]
  This library is currently in active development.
  The API can change rapidly.
homepage:
  https://github.com/nikita-volkov/strelka
bug-reports:
  https://github.com/nikita-volkov/strelka/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/strelka.git


library
  hs-source-dirs:
    library
  other-modules:
    Strelka.Prelude
    Strelka.HTTPAuthorizationParser
  exposed-modules:
    Strelka.Model
    Strelka.RequestParser
    Strelka.RequestBodyConsumer
    Strelka.ResponseBuilder
    Strelka.ResponseBodyBuilder
    Strelka.Executor
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  build-depends:
    -- codecs:
    base64-bytestring == 1.*,
    -- parsing:
    attoparsec >= 0.13 && < 0.14,
    http-media >= 0.6.4 && < 0.7,
    -- 
    bytestring >= 0.10.8 && < 0.11,
    text >= 1 && < 2,
    unordered-containers >= 0.2 && < 0.3,
    hashable == 1.*,
    -- 
    bifunctors == 5.*,
    semigroups >= 0.18 && < 0.19,
    mtl == 2.*,
    monad-control >= 1 && < 2,
    transformers-base >= 0.4 && < 0.5,
    transformers >= 0.4 && < 0.6,
    base-prelude < 2,
    base < 5
